@@ -56,7 +56,7 @@ library
     if flag(typeable_fingerprint)
         build-depends:
             base >=4.4 && <5, containers, syb,
-            hashable < 1.2,
+            hashable >= 1.1.2.3 && < 1.2,
             unordered-containers == 0.1.*
     else
         if flag(separate_syb)
