@@ -1,5 +1,6 @@
 Changelog for Uniplate
 
+    Require hashable-1.1.2.3, which has a TypeRep instance
 1.6.5
     Add more instances for the Data.Instances, such as Ord/Eq
 1.6.4
